--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -36,6 +36,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
+  flutter_riverpod: ^2.6.1
+  go_router: ^14.4.1
+  lottie: ^3.1.3
+  font_awesome_flutter: ^10.8.0
+  firebase_storage: ^12.3.4
+  cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.1
+  flutter_tts: ^4.0.2
+  permission_handler: ^11.3.1
+  image_picker: ^1.1.2
+  flutter_secure_storage: ^9.2.2
+  logger: ^2.4.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
